assets/css/main.css
/* ... */
#header h1 {
  color: #484848;
  font-weight: 400;
  height: inherit;
  left: 1.25em;
  line-height: inherit;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
}

#header nav {
  height: inherit;
  line-height: inherit;
  position: absolute;
  right: 1.25em;
  top: 0;
  vertical-align: middle;
}

#header nav ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

#header nav ul li {
  border-radius: 4px;
  display: inline-block;
  margin-left: 2.5em;
  padding-left: 0;
}

#header nav ul li a {
  -moz-transition: color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out;
  color: #666;
  display: inline-block;
  text-decoration: none;
}

#header nav ul li a:hover {
  color: #484848;
}

#header nav ul li:first-child {
  margin-left: 0;
}

#header nav ul li .button {
  border-color: rgba(144, 144, 144, 0.25);
  box-shadow: none;
  height: 3em;
  line-height: 2.9em;
  margin-bottom: 0;
  padding: 0 1.5em;
  position: relative;
  top: -0.075em;
  vertical-align: middle;
}

#header .container {
  position: relative;
}

#header .container h1 {
  left: 0;
}

#header .container nav {
  right: 0;
}

#header.alt {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  height: 3.25em;
  line-height: 3.25em;
  position: absolute;
}

#header.alt h1 {
  color: #ffffff;
  left: 2.5em;
  top: 2em;
}

#header.alt h1 a {
  color: #fff;
}

#header.alt nav {
  right: 2em;
  top: 2em;
}

#header.alt nav a {
  color: #fff;
}

#header.alt nav a:active,
#header.alt nav a:hover {
  color: #fff;
}

#header.alt .button {
  border-color: rgba(255, 255, 255, 0.5);
  color: #ffffff !important;
}

@media screen and (max-width: 980px) {
  #header {
    display: none;
  }
}

/* Menu */

.navPanelToggle {
  text-decoration: none;
  text-decoration: none;
  height: 50%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  display: none;
}

.navPanelToggle:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-transform: none !important;
}

@media screen and (max-width: 980px) {
  .navPanelToggle {
    display: block;
  }
}

.navPanelToggle *:before {
  background: rgba(144, 144, 144, 0.65);
  border-radius: 4px;
  color: #fff;
  display: block;
  font-size: 16px;
  height: 2.25em;
  left: 0.5em;
  line-height: 2.25em;
  position: absolute;
  text-align: center;
  top: 0.5em;
  width: 3.5em;
}

#navPanel {
  -moz-transform: translateX(-20em);
  -webkit-transform: translateX(-20em);
  -ms-transform: translateX(-20em);
  transform: translateX(-20em);
  -moz-transition: -moz-transform 0.5s ease, visibility 0.5s;
  -webkit-transition: -webkit-transform 0.5s ease, visibility 0.5s;
  -ms-transition: -ms-transform 0.5s ease, visibility 0.5s;
  transition: transform 0.5s ease, visibility 0.5s;
  -webkit-overflow-scrolling: touch;
  visibility: hidden;
  overflow-y: auto;
  position: fixed;
  left: 0;
  top: 0;
  background: #222;
  color: #fff;
  height: 100%;
  max-width: 80%;
  width: 20em;
  padding: 0.5em 1.25em;
  text-transform: uppercase;
}

#navPanel ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

#navPanel ul li {
  padding: 0;
}

#navPanel ul li:first-child a:not(.button),
#navPanel ul li:first-child span:not(.button) {
  border-top: 0;
}

#navPanel ul li a:not(.button),
#navPanel ul li span:not(.button) {
  border-top: solid 1px #555;
  color: #fff;
  display: block;
  padding: 0.75em 0;
  text-decoration: none;
}

#navPanel .button {
  width: 100%;
}

#navPanel .close {
  text-decoration: none;
  -moz-transition: color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out;
  -webkit-tap-highlight-color: transparent;
  border: 0;
  color: #484848;
  cursor: pointer;
  display: block;
  height: 4em;
  padding-right: 1.25em;
  position: absolute;
  right: 0;
  text-align: right;
  top: 0;
  vertical-align: middle;
  width: 5em;
}

#navPanel .close:before {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-transform: none !important;
}

#navPanel .close:before {
  content: '\f00d';
  width: 3em;
  height: 3em;
  line-height: 3em;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
}

#navPanel .close:hover {
  color: inherit;
}

@media screen and (max-width: 736px) {
  #navPanel .close {
    height: 4em;
    line-height: 4em;
  }
}

#navPanel.visible {
  -moz-transform: translateX(0);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
  visibility: visible;
}

/* Banner */

body.is-touch #banner {
  background-attachment: scroll;
}

#banner {
  padding: 16em 0 13em 0;
  background-attachment: fixed;
  background-image: url('../../images/hero-bg.jpg');
  background-blend-mode: overlay;
  background-position: center center;
  background-size: cover;
  line-height: 1.75;
  text-align: center;
}

@media screen and (max-width: 800px) {
  #banner {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-position: left center;
    background-color: #0003;
  }
}

#banner:last-child {
  margin-bottom: 0;
}

#banner h2 {
  color: #ffffff;
  display: inline-block;
  font-size: 3.5em;
  line-height: 1.35;
  margin-bottom: 0.5em;
}

#banner p {
  color: #fff;
  font-size: 1.5em;
  margin-bottom: 1.75em;
  text-transform: uppercase;
}

@media screen and (max-width: 1280px) {
  #banner {
    padding: 14em 0 11em 0;
  }

  #banner h2 {
    font-size: 2.5em;
  }
}

@media screen and (max-width: 980px) {
  #banner {
    padding: 9em 0 7em 0;
  }
}
/* ... */

